# app/Http/Resources/DepartureCollection.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\ResourceCollection;
+
+// https://laravel.com/api/10.x/Illuminate/Contracts/Pagination/Paginator.html#method_currentPage
+
+class DepartureCollection extends ResourceCollection
+{
+    /**
+     * Transform the resource collection into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'departures' => $this->collection,
+            'pagination' => [
+                'current_page' => $this->resource->currentPage(),
+                'last_page' => $this->resource->lastPage(),
+                'per_page' => $this->resource->perPage(),
+            ],
+        ];
+    }
+}
